src/style/_objects.header.less
@header-font-size: 15vmin;
@header-max-font-size: 8rem;

.header {
  margin: @content-margin;
  line-height: 1;
}

@supports(height: calc(100vh - 2 * var(--content-margin))) {
  .header {
    margin: initial;

    display: flex;
    align-items: flex-end;

    height: calc(100vh - 2 * var(--content-margin));
    margin-bottom: var(--content-spacing);
  }

}

.header__title {

  width: 100%;

  font-family: @heading-font;
  font-size: @header-font-size;
  position: sticky;
  margin-bottom: var(--content-margin);

  border-block-end: 0.07em solid @palette-black;
}

@media print {
  .header {
    height: calc(100vh - 1rem);
  }
}

@media screen and (orientation: portrait) {

  .header__title {
    writing-mode: vertical-rl;
    text-orientation: mixed;
    transform: rotate(180deg);
    display: flex;
    align-items: flex-end;
  }

}

